12-list-transitions-with-the-vue-transitiongroup-component

--- a/src/main.css
+++ b/src/main.css
@@ -7,5 +7,5 @@
 }
 
 button {
-  @apply bg-gray-200 rounded border-gray-300 border p-1;
+  @apply bg-gray-200 rounded border-gray-300 border px-1 text-xs;
 }
