13-staggering-list-transitions

--- a/src/main.css
+++ b/src/main.css
@@ -6,6 +6,10 @@
   @apply p-1;
 }
 
+input {
+  @apply border border-gray-300 rounded w-full px-1 focus:outline-none;
+}
+
 button {
   @apply bg-gray-200 rounded border-gray-300 border px-1 text-xs;
 }
